Lots of hacks but approaching something

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,14 +1,52 @@
 package(default_visibility = ["//visibility:public"])
 
 load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
-load(":webpack.bzl", "webpack_bundle")
+load("@com_habito_rules_purescript//purescript:purescript.bzl", "purescript_library")
+load("//webpack:webpack.bzl", "webpack_bundle", "webpack_toolchain")
+
+load(
+    "@com_habito_rules_purescript//purescript:purescript.bzl",
+    "purescript_toolchain",
+)
+
+purescript_toolchain(
+    name = "purescript",
+    version = "0.12.1",
+    tools = [
+        "@nixpkgs_purescript//:bin",
+        "@nixpkgs_tar//:bin",
+    ],
+)
+
+purescript_library(
+    name = "ps-lib",
+    src_strip_prefix = "ps-lib",
+    srcs = glob(["ps-lib/**/*.purs"]),
+    deps = [],
+)
 
 webpack_bundle(
     name = "bundle",
     config = "//:webpack.config.js",
     srcs = glob(["src/**"]),
     dist_dir = "dist",
-    plugins = [
-        "@npm//html-webpack-plugin",
+    deps = [
+        "@npm//hello-world-npm",
     ],
+)
+
+nodejs_binary(
+    name = "webpack-cli",
+    entry_point = "webpack-cli/bin/cli.js",
+    data = [
+        "@npm//webpack-cli",
+        "@npm//html-webpack-plugin",
+        "//:webpack-bazel.js",
+        "@npm//purs-loader",
+    ],
+)
+
+webpack_toolchain(
+    name = "webpack",
+    webpack = ":webpack-cli",
 )
