Hacking to gain more understanding
Rough plan towards implementation now:

* Pull out node_modules paths for Webpack sources from the sources being used.
* If these sources are PureScript files, we can't use them without getting
  `purs-loader` to work. That's not going to happen unless the Webpack CLI can
  find _those_ modules though. We can sort of get this from the `runfiles`, but
  it's a bit hacky. That said, hard-coding demonstrates it'll work here.

* Then we get `purs-loader`, but we still need `psa`. Again, that's an NPM
  package, so it's in the `runfiles`, but then _it_ needs `purs`. This is in
  the Nix environment but now we need to pull it into the sandbox that Webpack
  is building in, etc. This can likely be done with the `tools` parameter to
  the `run` action but it might thus be worth tweaking the toolchain rule to
  separate out dependencies and binary tools that the Webpack configuration
  needs.

* Annoyingly now I recall one limitation of the current approach -- that each
  Webpack bundle is effectively its own toolchain. Need to think about that and
  clean it up.

* Last but not least, this requires a patch to `rules_purescript` to expose
  `DefaultInfo` providers on `purescript_library` bundles. I think this is the
  right call in general but need to verify.

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -32,6 +32,7 @@ webpack_bundle(
     dist_dir = "dist",
     deps = [
         "@npm//hello-world-npm",
+        "//:ps-lib",
     ],
 )
 
@@ -43,6 +44,7 @@ nodejs_binary(
         "@npm//html-webpack-plugin",
         "//:webpack-bazel.js",
         "@npm//purs-loader",
+        "@npm//purescript-psa",
     ],
 )
 
