--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-loader": "^8.0.5",
     "hello-world-npm": "1.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "purescript-psa": "^0.7.3",
     "purs-loader": "^3.4.0",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0"
