--- a/webpack/BUILD.bazel
+++ b/webpack/BUILD.bazel
@@ -1,9 +1,7 @@
 exports_files([
     # Bazel libraries.
     "webpack.bzl",
-])
 
-toolchain_type(
-    name = "toolchain_type",
-    visibility = ["//visibility:public"],
-)
+    # Bazel JavaScript utilities
+    "bazel.js.template",
+])
